Added additional "on" color variables and classes

--- a/ui/src/css/core/colors.sass
+++ b/ui/src/css/core/colors.sass
@@ -9,6 +9,14 @@
   --q-dark:         #{$dark}
   --q-dark-page:    #{$dark-page}
 
+  --q-on-primary:   #{$on-primary}
+  --q-on-secondary: #{$on-secondary}
+  --q-on-accent:    #{$on-accent}
+  --q-on-positive:  #{$on-positive}
+  --q-on-negative:  #{$on-negative}
+  --q-on-info:      #{$on-info}
+  --q-on-warning:   #{$on-warning}
+
 .text-dark
   color: var(--q-dark) !important
 .bg-dark
@@ -18,36 +26,50 @@
   color: var(--q-primary) !important
 .bg-primary
   background: var(--q-primary) !important
+.text-on-primary
+  color: var(--q-on-primary) !important
 
 .text-secondary
   color: var(--q-secondary) !important
 .bg-secondary
   background: var(--q-secondary) !important
+.text-on-secondary
+  color: var(--q-on-secondary) !important
 
 .text-accent
   color: var(--q-accent) !important
 .bg-accent
   background: var(--q-accent) !important
+.text-on-accent
+  color: var(--q-on-accent) !important
 
 .text-positive
   color: var(--q-positive) !important
 .bg-positive
   background: var(--q-positive) !important
+.text-on-positive
+  color: var(--q-on-positive) !important
 
 .text-negative
   color: var(--q-negative) !important
 .bg-negative
   background: var(--q-negative) !important
+.text-on-negative
+  color: var(--q-on-negative) !important
 
 .text-info
   color: var(--q-info) !important
 .bg-info
   background: var(--q-info) !important
+.text-on-info
+  color: var(--q-on-info) !important
 
 .text-warning
   color: var(--q-warning) !important
 .bg-warning
   background: var(--q-warning) !important
+.text-on-warning
+  color: var(--q-on-warning) !important
 
 .text-white
   color: #fff !important
@@ -931,6 +953,860 @@
 .text-blue-grey-14
   color: $blue-grey-14 !important
 
+.text-on-red
+  color: $on-red !important
+
+.text-on-red-1
+  color: $on-red-1 !important
+
+.text-on-red-2
+  color: $on-red-2 !important
+
+.text-on-red-3
+  color: $on-red-3 !important
+
+.text-on-red-4
+  color: $on-red-4 !important
+
+.text-on-red-5
+  color: $on-red-5 !important
+
+.text-on-red-6
+  color: $on-red-6 !important
+
+.text-on-red-7
+  color: $on-red-7 !important
+
+.text-on-red-8
+  color: $on-red-8 !important
+
+.text-on-red-9
+  color: $on-red-9 !important
+
+.text-on-red-10
+  color: $on-red-10 !important
+
+.text-on-red-11
+  color: $on-red-11 !important
+
+.text-on-red-12
+  color: $on-red-12 !important
+
+.text-on-red-13
+  color: $on-red-13 !important
+
+.text-on-red-14
+  color: $on-red-14 !important
+
+.text-on-pink
+  color: $on-pink !important
+
+.text-on-pink-1
+  color: $on-pink-1 !important
+
+.text-on-pink-2
+  color: $on-pink-2 !important
+
+.text-on-pink-3
+  color: $on-pink-3 !important
+
+.text-on-pink-4
+  color: $on-pink-4 !important
+
+.text-on-pink-5
+  color: $on-pink-5 !important
+
+.text-on-pink-6
+  color: $on-pink-6 !important
+
+.text-on-pink-7
+  color: $on-pink-7 !important
+
+.text-on-pink-8
+  color: $on-pink-8 !important
+
+.text-on-pink-9
+  color: $on-pink-9 !important
+
+.text-on-pink-10
+  color: $on-pink-10 !important
+
+.text-on-pink-11
+  color: $on-pink-11 !important
+
+.text-on-pink-12
+  color: $on-pink-12 !important
+
+.text-on-pink-13
+  color: $on-pink-13 !important
+
+.text-on-pink-14
+  color: $on-pink-14 !important
+
+.text-on-purple
+  color: $on-purple !important
+
+.text-on-purple-1
+  color: $on-purple-1 !important
+
+.text-on-purple-2
+  color: $on-purple-2 !important
+
+.text-on-purple-3
+  color: $on-purple-3 !important
+
+.text-on-purple-4
+  color: $on-purple-4 !important
+
+.text-on-purple-5
+  color: $on-purple-5 !important
+
+.text-on-purple-6
+  color: $on-purple-6 !important
+
+.text-on-purple-7
+  color: $on-purple-7 !important
+
+.text-on-purple-8
+  color: $on-purple-8 !important
+
+.text-on-purple-9
+  color: $on-purple-9 !important
+
+.text-on-purple-10
+  color: $on-purple-10 !important
+
+.text-on-purple-11
+  color: $on-purple-11 !important
+
+.text-on-purple-12
+  color: $on-purple-12 !important
+
+.text-on-purple-13
+  color: $on-purple-13 !important
+
+.text-on-purple-14
+  color: $on-purple-14 !important
+
+.text-on-deep-purple
+  color: $on-deep-purple !important
+
+.text-on-deep-purple-1
+  color: $on-deep-purple-1 !important
+
+.text-on-deep-purple-2
+  color: $on-deep-purple-2 !important
+
+.text-on-deep-purple-3
+  color: $on-deep-purple-3 !important
+
+.text-on-deep-purple-4
+  color: $on-deep-purple-4 !important
+
+.text-on-deep-purple-5
+  color: $on-deep-purple-5 !important
+
+.text-on-deep-purple-6
+  color: $on-deep-purple-6 !important
+
+.text-on-deep-purple-7
+  color: $on-deep-purple-7 !important
+
+.text-on-deep-purple-8
+  color: $on-deep-purple-8 !important
+
+.text-on-deep-purple-9
+  color: $on-deep-purple-9 !important
+
+.text-on-deep-purple-10
+  color: $on-deep-purple-10 !important
+
+.text-on-deep-purple-11
+  color: $on-deep-purple-11 !important
+
+.text-on-deep-purple-12
+  color: $on-deep-purple-12 !important
+
+.text-on-deep-purple-13
+  color: $on-deep-purple-13 !important
+
+.text-on-deep-purple-14
+  color: $on-deep-purple-14 !important
+
+.text-on-indigo
+  color: $on-indigo !important
+
+.text-on-indigo-1
+  color: $on-indigo-1 !important
+
+.text-on-indigo-2
+  color: $on-indigo-2 !important
+
+.text-on-indigo-3
+  color: $on-indigo-3 !important
+
+.text-on-indigo-4
+  color: $on-indigo-4 !important
+
+.text-on-indigo-5
+  color: $on-indigo-5 !important
+
+.text-on-indigo-6
+  color: $on-indigo-6 !important
+
+.text-on-indigo-7
+  color: $on-indigo-7 !important
+
+.text-on-indigo-8
+  color: $on-indigo-8 !important
+
+.text-on-indigo-9
+  color: $on-indigo-9 !important
+
+.text-on-indigo-10
+  color: $on-indigo-10 !important
+
+.text-on-indigo-11
+  color: $on-indigo-11 !important
+
+.text-on-indigo-12
+  color: $on-indigo-12 !important
+
+.text-on-indigo-13
+  color: $on-indigo-13 !important
+
+.text-on-indigo-14
+  color: $on-indigo-14 !important
+
+.text-on-blue
+  color: $on-blue !important
+
+.text-on-blue-1
+  color: $on-blue-1 !important
+
+.text-on-blue-2
+  color: $on-blue-2 !important
+
+.text-on-blue-3
+  color: $on-blue-3 !important
+
+.text-on-blue-4
+  color: $on-blue-4 !important
+
+.text-on-blue-5
+  color: $on-blue-5 !important
+
+.text-on-blue-6
+  color: $on-blue-6 !important
+
+.text-on-blue-7
+  color: $on-blue-7 !important
+
+.text-on-blue-8
+  color: $on-blue-8 !important
+
+.text-on-blue-9
+  color: $on-blue-9 !important
+
+.text-on-blue-10
+  color: $on-blue-10 !important
+
+.text-on-blue-11
+  color: $on-blue-11 !important
+
+.text-on-blue-12
+  color: $on-blue-12 !important
+
+.text-on-blue-13
+  color: $on-blue-13 !important
+
+.text-on-blue-14
+  color: $on-blue-14 !important
+
+.text-on-light-blue
+  color: $on-light-blue !important
+
+.text-on-light-blue-1
+  color: $on-light-blue-1 !important
+
+.text-on-light-blue-2
+  color: $on-light-blue-2 !important
+
+.text-on-light-blue-3
+  color: $on-light-blue-3 !important
+
+.text-on-light-blue-4
+  color: $on-light-blue-4 !important
+
+.text-on-light-blue-5
+  color: $on-light-blue-5 !important
+
+.text-on-light-blue-6
+  color: $on-light-blue-6 !important
+
+.text-on-light-blue-7
+  color: $on-light-blue-7 !important
+
+.text-on-light-blue-8
+  color: $on-light-blue-8 !important
+
+.text-on-light-blue-9
+  color: $on-light-blue-9 !important
+
+.text-on-light-blue-10
+  color: $on-light-blue-10 !important
+
+.text-on-light-blue-11
+  color: $on-light-blue-11 !important
+
+.text-on-light-blue-12
+  color: $on-light-blue-12 !important
+
+.text-on-light-blue-13
+  color: $on-light-blue-13 !important
+
+.text-on-light-blue-14
+  color: $on-light-blue-14 !important
+
+.text-on-cyan
+  color: $on-cyan !important
+
+.text-on-cyan-1
+  color: $on-cyan-1 !important
+
+.text-on-cyan-2
+  color: $on-cyan-2 !important
+
+.text-on-cyan-3
+  color: $on-cyan-3 !important
+
+.text-on-cyan-4
+  color: $on-cyan-4 !important
+
+.text-on-cyan-5
+  color: $on-cyan-5 !important
+
+.text-on-cyan-6
+  color: $on-cyan-6 !important
+
+.text-on-cyan-7
+  color: $on-cyan-7 !important
+
+.text-on-cyan-8
+  color: $on-cyan-8 !important
+
+.text-on-cyan-9
+  color: $on-cyan-9 !important
+
+.text-on-cyan-10
+  color: $on-cyan-10 !important
+
+.text-on-cyan-11
+  color: $on-cyan-11 !important
+
+.text-on-cyan-12
+  color: $on-cyan-12 !important
+
+.text-on-cyan-13
+  color: $on-cyan-13 !important
+
+.text-on-cyan-14
+  color: $on-cyan-14 !important
+
+.text-on-teal
+  color: $on-teal !important
+
+.text-on-teal-1
+  color: $on-teal-1 !important
+
+.text-on-teal-2
+  color: $on-teal-2 !important
+
+.text-on-teal-3
+  color: $on-teal-3 !important
+
+.text-on-teal-4
+  color: $on-teal-4 !important
+
+.text-on-teal-5
+  color: $on-teal-5 !important
+
+.text-on-teal-6
+  color: $on-teal-6 !important
+
+.text-on-teal-7
+  color: $on-teal-7 !important
+
+.text-on-teal-8
+  color: $on-teal-8 !important
+
+.text-on-teal-9
+  color: $on-teal-9 !important
+
+.text-on-teal-10
+  color: $on-teal-10 !important
+
+.text-on-teal-11
+  color: $on-teal-11 !important
+
+.text-on-teal-12
+  color: $on-teal-12 !important
+
+.text-on-teal-13
+  color: $on-teal-13 !important
+
+.text-on-teal-14
+  color: $on-teal-14 !important
+
+.text-on-green
+  color: $on-green !important
+
+.text-on-green-1
+  color: $on-green-1 !important
+
+.text-on-green-2
+  color: $on-green-2 !important
+
+.text-on-green-3
+  color: $on-green-3 !important
+
+.text-on-green-4
+  color: $on-green-4 !important
+
+.text-on-green-5
+  color: $on-green-5 !important
+
+.text-on-green-6
+  color: $on-green-6 !important
+
+.text-on-green-7
+  color: $on-green-7 !important
+
+.text-on-green-8
+  color: $on-green-8 !important
+
+.text-on-green-9
+  color: $on-green-9 !important
+
+.text-on-green-10
+  color: $on-green-10 !important
+
+.text-on-green-11
+  color: $on-green-11 !important
+
+.text-on-green-12
+  color: $on-green-12 !important
+
+.text-on-green-13
+  color: $on-green-13 !important
+
+.text-on-green-14
+  color: $on-green-14 !important
+
+.text-on-light-green
+  color: $on-light-green !important
+
+.text-on-light-green-1
+  color: $on-light-green-1 !important
+
+.text-on-light-green-2
+  color: $on-light-green-2 !important
+
+.text-on-light-green-3
+  color: $on-light-green-3 !important
+
+.text-on-light-green-4
+  color: $on-light-green-4 !important
+
+.text-on-light-green-5
+  color: $on-light-green-5 !important
+
+.text-on-light-green-6
+  color: $on-light-green-6 !important
+
+.text-on-light-green-7
+  color: $on-light-green-7 !important
+
+.text-on-light-green-8
+  color: $on-light-green-8 !important
+
+.text-on-light-green-9
+  color: $on-light-green-9 !important
+
+.text-on-light-green-10
+  color: $on-light-green-10 !important
+
+.text-on-light-green-11
+  color: $on-light-green-11 !important
+
+.text-on-light-green-12
+  color: $on-light-green-12 !important
+
+.text-on-light-green-13
+  color: $on-light-green-13 !important
+
+.text-on-light-green-14
+  color: $on-light-green-14 !important
+
+.text-on-lime
+  color: $on-lime !important
+
+.text-on-lime-1
+  color: $on-lime-1 !important
+
+.text-on-lime-2
+  color: $on-lime-2 !important
+
+.text-on-lime-3
+  color: $on-lime-3 !important
+
+.text-on-lime-4
+  color: $on-lime-4 !important
+
+.text-on-lime-5
+  color: $on-lime-5 !important
+
+.text-on-lime-6
+  color: $on-lime-6 !important
+
+.text-on-lime-7
+  color: $on-lime-7 !important
+
+.text-on-lime-8
+  color: $on-lime-8 !important
+
+.text-on-lime-9
+  color: $on-lime-9 !important
+
+.text-on-lime-10
+  color: $on-lime-10 !important
+
+.text-on-lime-11
+  color: $on-lime-11 !important
+
+.text-on-lime-12
+  color: $on-lime-12 !important
+
+.text-on-lime-13
+  color: $on-lime-13 !important
+
+.text-on-lime-14
+  color: $on-lime-14 !important
+
+.text-on-yellow
+  color: $on-yellow !important
+
+.text-on-yellow-1
+  color: $on-yellow-1 !important
+
+.text-on-yellow-2
+  color: $on-yellow-2 !important
+
+.text-on-yellow-3
+  color: $on-yellow-3 !important
+
+.text-on-yellow-4
+  color: $on-yellow-4 !important
+
+.text-on-yellow-5
+  color: $on-yellow-5 !important
+
+.text-on-yellow-6
+  color: $on-yellow-6 !important
+
+.text-on-yellow-7
+  color: $on-yellow-7 !important
+
+.text-on-yellow-8
+  color: $on-yellow-8 !important
+
+.text-on-yellow-9
+  color: $on-yellow-9 !important
+
+.text-on-yellow-10
+  color: $on-yellow-10 !important
+
+.text-on-yellow-11
+  color: $on-yellow-11 !important
+
+.text-on-yellow-12
+  color: $on-yellow-12 !important
+
+.text-on-yellow-13
+  color: $on-yellow-13 !important
+
+.text-on-yellow-14
+  color: $on-yellow-14 !important
+
+.text-on-amber
+  color: $on-amber !important
+
+.text-on-amber-1
+  color: $on-amber-1 !important
+
+.text-on-amber-2
+  color: $on-amber-2 !important
+
+.text-on-amber-3
+  color: $on-amber-3 !important
+
+.text-on-amber-4
+  color: $on-amber-4 !important
+
+.text-on-amber-5
+  color: $on-amber-5 !important
+
+.text-on-amber-6
+  color: $on-amber-6 !important
+
+.text-on-amber-7
+  color: $on-amber-7 !important
+
+.text-on-amber-8
+  color: $on-amber-8 !important
+
+.text-on-amber-9
+  color: $on-amber-9 !important
+
+.text-on-amber-10
+  color: $on-amber-10 !important
+
+.text-on-amber-11
+  color: $on-amber-11 !important
+
+.text-on-amber-12
+  color: $on-amber-12 !important
+
+.text-on-amber-13
+  color: $on-amber-13 !important
+
+.text-on-amber-14
+  color: $on-amber-14 !important
+
+.text-on-orange
+  color: $on-orange !important
+
+.text-on-orange-1
+  color: $on-orange-1 !important
+
+.text-on-orange-2
+  color: $on-orange-2 !important
+
+.text-on-orange-3
+  color: $on-orange-3 !important
+
+.text-on-orange-4
+  color: $on-orange-4 !important
+
+.text-on-orange-5
+  color: $on-orange-5 !important
+
+.text-on-orange-6
+  color: $on-orange-6 !important
+
+.text-on-orange-7
+  color: $on-orange-7 !important
+
+.text-on-orange-8
+  color: $on-orange-8 !important
+
+.text-on-orange-9
+  color: $on-orange-9 !important
+
+.text-on-orange-10
+  color: $on-orange-10 !important
+
+.text-on-orange-11
+  color: $on-orange-11 !important
+
+.text-on-orange-12
+  color: $on-orange-12 !important
+
+.text-on-orange-13
+  color: $on-orange-13 !important
+
+.text-on-orange-14
+  color: $on-orange-14 !important
+
+.text-on-deep-orange
+  color: $on-deep-orange !important
+
+.text-on-deep-orange-1
+  color: $on-deep-orange-1 !important
+
+.text-on-deep-orange-2
+  color: $on-deep-orange-2 !important
+
+.text-on-deep-orange-3
+  color: $on-deep-orange-3 !important
+
+.text-on-deep-orange-4
+  color: $on-deep-orange-4 !important
+
+.text-on-deep-orange-5
+  color: $on-deep-orange-5 !important
+
+.text-on-deep-orange-6
+  color: $on-deep-orange-6 !important
+
+.text-on-deep-orange-7
+  color: $on-deep-orange-7 !important
+
+.text-on-deep-orange-8
+  color: $on-deep-orange-8 !important
+
+.text-on-deep-orange-9
+  color: $on-deep-orange-9 !important
+
+.text-on-deep-orange-10
+  color: $on-deep-orange-10 !important
+
+.text-on-deep-orange-11
+  color: $on-deep-orange-11 !important
+
+.text-on-deep-orange-12
+  color: $on-deep-orange-12 !important
+
+.text-on-deep-orange-13
+  color: $on-deep-orange-13 !important
+
+.text-on-deep-orange-14
+  color: $on-deep-orange-14 !important
+
+.text-on-brown
+  color: $on-brown !important
+
+.text-on-brown-1
+  color: $on-brown-1 !important
+
+.text-on-brown-2
+  color: $on-brown-2 !important
+
+.text-on-brown-3
+  color: $on-brown-3 !important
+
+.text-on-brown-4
+  color: $on-brown-4 !important
+
+.text-on-brown-5
+  color: $on-brown-5 !important
+
+.text-on-brown-6
+  color: $on-brown-6 !important
+
+.text-on-brown-7
+  color: $on-brown-7 !important
+
+.text-on-brown-8
+  color: $on-brown-8 !important
+
+.text-on-brown-9
+  color: $on-brown-9 !important
+
+.text-on-brown-10
+  color: $on-brown-10 !important
+
+.text-on-brown-11
+  color: $on-brown-11 !important
+
+.text-on-brown-12
+  color: $on-brown-12 !important
+
+.text-on-brown-13
+  color: $on-brown-13 !important
+
+.text-on-brown-14
+  color: $on-brown-14 !important
+
+.text-on-grey
+  color: $on-grey !important
+
+.text-on-grey-1
+  color: $on-grey-1 !important
+
+.text-on-grey-2
+  color: $on-grey-2 !important
+
+.text-on-grey-3
+  color: $on-grey-3 !important
+
+.text-on-grey-4
+  color: $on-grey-4 !important
+
+.text-on-grey-5
+  color: $on-grey-5 !important
+
+.text-on-grey-6
+  color: $on-grey-6 !important
+
+.text-on-grey-7
+  color: $on-grey-7 !important
+
+.text-on-grey-8
+  color: $on-grey-8 !important
+
+.text-on-grey-9
+  color: $on-grey-9 !important
+
+.text-on-grey-10
+  color: $on-grey-10 !important
+
+.text-on-grey-11
+  color: $on-grey-11 !important
+
+.text-on-grey-12
+  color: $on-grey-12 !important
+
+.text-on-grey-13
+  color: $on-grey-13 !important
+
+.text-on-grey-14
+  color: $on-grey-14 !important
+
+.text-on-blue-grey
+  color: $on-blue-grey !important
+
+.text-on-blue-grey-1
+  color: $on-blue-grey-1 !important
+
+.text-on-blue-grey-2
+  color: $on-blue-grey-2 !important
+
+.text-on-blue-grey-3
+  color: $on-blue-grey-3 !important
+
+.text-on-blue-grey-4
+  color: $on-blue-grey-4 !important
+
+.text-on-blue-grey-5
+  color: $on-blue-grey-5 !important
+
+.text-on-blue-grey-6
+  color: $on-blue-grey-6 !important
+
+.text-on-blue-grey-7
+  color: $on-blue-grey-7 !important
+
+.text-on-blue-grey-8
+  color: $on-blue-grey-8 !important
+
+.text-on-blue-grey-9
+  color: $on-blue-grey-9 !important
+
+.text-on-blue-grey-10
+  color: $on-blue-grey-10 !important
+
+.text-on-blue-grey-11
+  color: $on-blue-grey-11 !important
+
+.text-on-blue-grey-12
+  color: $on-blue-grey-12 !important
+
+.text-on-blue-grey-13
+  color: $on-blue-grey-13 !important
+
+.text-on-blue-grey-14
+  color: $on-blue-grey-14 !important
 
 .bg-red
   background: $red !important
