Use --q-on-primary instead of hard coded value

--- a/ui/src/components/date/QDate.sass
+++ b/ui/src/components/date/QDate.sass
@@ -12,7 +12,7 @@
 
   &__header
     border-top-left-radius: inherit
-    color: #fff
+    color: var(--q-on-primary)
     background-color: var(--q-primary)
     padding: 16px
 
