--- a/ui/src/components/time/QTime.sass
+++ b/ui/src/components/time/QTime.sass
@@ -14,7 +14,7 @@
 
   &__header
     border-top-left-radius: inherit
-    color: #fff
+    color: var(--q-on-primary)
     background-color: var(--q-primary)
     padding: 16px
     font-weight: 300
@@ -121,7 +121,7 @@
 
     &--active
       background-color: var(--q-primary)
-      color: #fff
+      color: var(--q-on-primary)
 
   @for $pos from 0 through 11
     $angle: (270 + 30 * $pos)
@@ -143,7 +143,7 @@
 
   &__now-button
     background-color: var(--q-primary)
-    color: #fff
+    color: var(--q-on-primary)
     top: 12px
     right: 12px
 
