--- a/ui/src/components/uploader/QUploader.sass
+++ b/ui/src/components/uploader/QUploader.sass
@@ -41,7 +41,7 @@
     border-top-left-radius: inherit
     border-top-right-radius: inherit
     background-color: var(--q-primary)
-    color: #fff
+    color: var(--q-on-primary)
     width: 100%
 
   &__spinner
