--- a/ui/src/components/badge/QBadge.sass
+++ b/ui/src/components/badge/QBadge.sass
@@ -1,6 +1,6 @@
 .q-badge
   background-color: var(--q-primary)
-  color: #fff
+  color: var(--q-on-primary)
   padding: 2px 6px
   border-radius: $generic-border-radius
   font-size: 12px
