feat(docs): more design work

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -38,8 +38,11 @@ $shadow--large: 0 24px 24px 0 rgba(0, 179, 255, 0.24)
 $shadow--medium: 0 6px 6px 0 rgba($brand-primary, 0.38)
 $shadow--small: 0 6px 6px 0 rgba($brand-primary, 0.28)
 
+$shadow--primary: 0 0 6px 3px $brand-primary
+$shadow--primary-down: 0 0 8px 1px rgba($brand-primary, 0.8)
+
 // also update QHeader :height-hint
 $headerHeight: 128px
 
-// should be used with dark mode only:
-$spreaded-shadow: 0 0 3px 3px rgba($brand-primary, 0.38)
+$font-size: 12px
+$letter-spacing: 1px
