feat(docs): do not allow headers to horizontally overflow the page

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -141,6 +141,14 @@ ul
   font-size: 0.8rem
   margin: 1.5rem 0
 
+.doc-h1,
+.doc-h2,
+.doc-h3,
+.doc-h4,
+.doc-h5,
+.doc-h6
+  word-break: break-word
+
 .doc-img
   max-width: 100%
 
