--- a/ui/src/css/core/mouse.sass
+++ b/ui/src/css/core/mouse.sass
@@ -1,8 +1,10 @@
 .non-selectable
   user-select: none !important
 
-.scroll
+.scroll,
+body.mobile .scroll--mobile
   overflow: auto
+
 .scroll, .scroll-x, .scroll-y
   -webkit-overflow-scrolling: touch
   will-change: scroll-position
