feat(docs): root level btns work

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -277,6 +277,8 @@ body.q-scroll--lock .q-page
   margin: 36px 0
 
 .call-to-action-btn
+  background: $brand-accent
+  color: #fff
   font-weight: bold
   font-size: 14px
   letter-spacing: 2.63px
