feat(docs): drawer close btn

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -279,7 +279,9 @@ body.q-scroll--lock .q-page
   font-weight: bold
   font-size: 14px
   letter-spacing: 2.63px
-  padding: 16px
+
+  &.q-btn--rectangle
+    padding: 16px
 
 $additional-colors: ('brand-primary' $brand-primary, 'brand-secondary' $brand-secondary, 'brand-accent' $brand-accent)
 @each $color-name, $color in $additional-colors
