perf(docs): speed up page load by managing font loading better

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -1,5 +1,31 @@
 @import './prism-theme.sass'
 
+@font-face
+  font-family: 'Montserrat'
+  font-style: normal
+  font-weight: 400 700
+  font-display: swap
+  src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUSjIg1_i6t8kCHKm459WlhyyTh89Y.woff2) format('woff2')
+
+@font-face
+  font-family: 'Material Icons'
+  font-style: normal
+  font-weight: 400
+  src: url(https://fonts.gstatic.com/s/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2) format('woff2')
+
+.material-icons
+  font-family: 'Material Icons'
+  font-weight: normal
+  font-style: normal
+  line-height: 1
+  letter-spacing: normal
+  text-transform: none
+  white-space: nowrap
+  word-wrap: normal
+  direction: ltr
+  -webkit-font-feature-settings: 'liga'
+  -webkit-font-smoothing: antialiased
+
 .primary-line-height
   line-height: 1.5
 
