feat(docs): tweak dark mode bg color

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -27,7 +27,7 @@ $light-text: #1d1d1d // $dark
 $light-bg: #fafafa
 
 $dark-text: #e5e5e5
-$dark-bg: #001724
+$dark-bg: #00111b
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
 $font-family-examples: -apple-system, 'Roboto', BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
