feat(docs): typography work

--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -30,6 +30,10 @@ $dark-text: #e5e5e5
 $dark-bg: #00111b
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
+$font-size: 12px
+$font-weight: 500
+$letter-spacing: .7px
+
 $font-family-examples: -apple-system, 'Roboto', BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family: 'Montserrat', $font-family-examples
 $font-family-avenir: Avenir, $font-family
@@ -43,6 +47,3 @@ $shadow--primary-down: 0 0 8px 1px rgba($brand-primary, 0.8)
 
 // also update QHeader :height-hint
 $headerHeight: 128px
-
-$font-size: 12px
-$letter-spacing: 1px
