feat(docs): coloring work

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -50,7 +50,7 @@ ul
   border-radius: 5px
   font-family: inherit
   color: $brand-primary
-  border: 1px solid $brand-primary
+  border: 1px solid currentColor
 
 .doc-note
   font-family: $font-family-avenir
@@ -341,10 +341,10 @@ $letter-spacing-list: 25, 40, 100, 225, 263, 300, 375, 450, 675
 
 body.body--dark
   color: $dark-text
-  background: $dark-bg
+  background: #080E1A
 
   .doc-img
-    background-color: #a8b6c5
+    background-color: $ship-shell
     border-radius: $generic-border-radius
 
   .doc-heading .q-badge
