--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -18,16 +18,24 @@ $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
 
-$brand-primary: #00b4ff
-$brand-secondary: #475d66
-$brand-accent: #ea5e13
+/* branding colors */
+$ice-dust: #00B4FF
+$cold-black: #050A14
+$mars-sand: #EA5E13
+$void-dust: #D8E1E5
+$ship-shell: #8FA8B2
+$floating-rock: #475D66
+
+$brand-primary: $ice-dust
+$brand-secondary: $floating-rock
+$brand-accent: $mars-sand
 
 $light-pill: #f5f5f5 // $grey-2
 $light-text: #1d1d1d // $dark
 $light-bg: #fafafa
 
 $dark-text: #e5e5e5
-$dark-bg: #00111b
+$dark-bg: $cold-black
 $dark-pill: scale-color($brand-primary, $lightness: -80%)
 
 $font-size: 12px
