--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -320,21 +320,12 @@ $additional-colors: ('brand-primary' $brand-primary, 'brand-secondary' $brand-se
   .text-#{$color-name}
     color: var(--q-#{$color-name}) !important
 
-$alpha-map: ('87' 0.87, '54' 0.54, '38' 0.38, '28' 0.28, 'focused-dark' 0.24, 'focused-light' 0.12, '12' 0.12, 'activated-dark' 0.24, 'activated-light' 0.12, 'selected' 0.08, 'hover' 0.04)
-$color-map: ('brand-primary' $brand-primary, 'brand-secondary' $brand-secondary, 'brand-accent' $brand-accent, 'black' #000, 'white' #fff)
-@each $alpha-name, $alpha in $alpha-map
-  @each $color-name, $color in $color-map
-    .bg-#{$color-name}-#{$alpha-name}
-      background-color: rgba($color, $alpha) !important
-    .text-#{$color-name}-#{$alpha-name}
-      color: rgba($color, $alpha) !important
-
-$text-size-list: 10, 12, 14, 16, 18, 20, 24, 28, 32, 36
+$text-size-list: 12, 14, 16, 20, 24, 36
 @each $text-size in $text-size-list
   .text-size-#{$text-size}
     font-size: $text-size + px !important
 
-$letter-spacing-list: 25, 40, 100, 225, 263, 300, 375, 450, 675
+$letter-spacing-list: 40, 100, 225, 263, 300, 375, 450
 @each $letter-spacing in $letter-spacing-list
   .letter-spacing-#{$letter-spacing}
     letter-spacing: ($letter-spacing/100) + px !important
