perf: hide SVGs inside invisible
close #15094

--- a/ui/src/css/core/visibility.sass
+++ b/ui/src/css/core/visibility.sass
@@ -40,6 +40,8 @@
   visibility: hidden !important
   transition: none !important
   animation: none !important
+.invisible svg *
+  display: none
 .transparent
   background: transparent !important
 
