--- a/docs/src/css/prism-theme.sass
+++ b/docs/src/css/prism-theme.sass
@@ -1,21 +1,19 @@
 .doc-code
-  border-radius: inherit
   margin: 0
   position: relative
-  font-size: 12px
+  font-size: 11px
   font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace
+  line-height: 1.5
+  tab-size: 2
   text-align: left
   white-space: pre
   word-spacing: normal
   word-break: normal
   word-wrap: normal
-  line-height: 1.5
-  tab-size: 2
   hyphens: none
   overflow: auto
-  padding: 0
-  border-radius: $generic-border-radius
-  padding: 1em
+  padding: 16px
+  border-radius: inherit
 
   &--prerendered
     border-width: 1px 4px
