--- a/docs/src/css/quasar.variables.sass
+++ b/docs/src/css/quasar.variables.sass
@@ -18,7 +18,6 @@ $negative  : #C10015
 $info      : #31CCEC
 $warning   : #F2C037
 
-/* branding colors */
 $ice-dust: #00B4FF
 $cold-black: #050A14
 $mars-sand: #EA5E13
@@ -49,7 +48,6 @@ $letter-spacing-brand: .7px
 
 $font-family-examples: -apple-system, 'Roboto', BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif
 $font-family: 'Montserrat', $font-family-examples
-$font-family-avenir: Avenir, $font-family
 
 $shadow--large: 0 24px 24px 0 rgba(0, 179, 255, 0.24)
 $shadow--medium: 0 6px 6px 0 rgba($brand-primary, 0.38)
@@ -61,3 +59,4 @@ $shadow--primary-down: 0 0 8px 1px rgba($brand-primary, 0.8)
 // also update QHeader :height-hint
 $header-height: 128px
 $header-transition: .6s cubic-bezier(0.25, 0.8, 0.5, 1)
+$header-quick-transition: .28s ease-in-out
