fix(docs): tabs indicator when moving

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -337,7 +337,7 @@ body.q-scroll--lock .q-page
 
 .header-tabs
   &,
-  .q-tab
+  .q-tabs__content
     background: #fff
     letter-spacing: $letter-spacing-brand
     border-radius: $generic-border-radius $generic-border-radius 0 0
@@ -392,7 +392,7 @@ body.body--dark
 
   .header-tabs
     &,
-    .q-tab
+    .q-tabs__content
       background: $dark-bg
 
   .doc-heading .q-badge,
